[tool.poetry]
name = "supersecurewebpage"
version = "0.1.0"
description = ""
authors = ["Saggins <win32prog@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
